# ml-api

./: .env.example  .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CHANGELOG_UV_MIGRATION.md  CICD_SUMMARY.md  CICD_UPDATE_SUMMARY.md  CICD_UV_MIGRATION.md  CI_CD_GUIDE.md  CURL_EXAMPLES.md  Dockerfile  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_GUIDE.md  MIGRATION_UV.md  Makefile  PROJECT_SUMMARY.md  PYPI_SETUP.md  QUICK_START_CICD.md  README.md  RELEASING.md  SUMMARY.md  UV_COMMANDS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  version-bump.yml
app/: __init__.py  clients.py  main.py
app/api/routes/: health.py  splits.py
app/core/: config.py  exceptions.py  logging.py  telemetry.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/schemas/: __init__.py  experiment.py  importance.py  model_registry.py  predict.py  split.py
app/services/: split_service.py
app/services/training/: artifact_io.py  catboost_trainer.py  dataset_io.py  dispatcher.py  lightgbm_trainer.py  preprocess.py  xgboost_trainer.py
cli/: main.py
ml_api/: clients.py  main.py
ml_api/api/routes/: health.py  splits.py
ml_api/cli/: main.py
ml_api/core/: config.py  exceptions.py  logging.py  telemetry.py
ml_api/db/: session.py
ml_api/db/migrations/: env.py
ml_api/db/models/: experiment.py  model_registry.py  split.py  trial.py
ml_api/schemas/: __init__.py  experiment.py  importance.py  model_registry.py  predict.py  split.py
ml_api/services/: split_service.py
ml_api/services/training/: artifact_io.py  catboost_trainer.py  dataset_io.py  dispatcher.py  lightgbm_trainer.py  preprocess.py  xgboost_trainer.py
scripts/: __init__.py
tests/: conftest.py  test_health.py  test_imports.py
