[project]
name = "ml-api"
version = "0.1.0"
description = "Production-grade ML API service with Polars, FastAPI, and GCS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = [
    "machine-learning",
    "api",
    "polars",
    "fastapi",
    "mlops",
    "optuna",
    "catboost",
    "xgboost",
    "lightgbm",
    "model-serving",
    "hyperparameter-tuning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",  # Required for async SQLAlchemy
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    # Data processing - Polars first!
    "polars>=0.20.3",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "pyarrow>=14.0.2",
    # Cloud storage
    "google-cloud-storage>=2.14.0",
    # Background jobs - using Arq (Redis-based)
    "arq>=0.25.0",
    "redis>=5.0.1",
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
ml = [
    # ML Libraries
    "catboost>=1.2.2",
    "xgboost>=2.0.3",
    "lightgbm>=4.2.0",
    "optuna>=3.5.0",
    "shap>=0.46.0",
    "scikit-learn>=1.4.0",
]

dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "fakeredis>=2.21.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

all = [
    "ml-api[ml,dev]",
]

[project.scripts]
ml-api = "ml_api.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_api"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Ignore F403 (import *) in Alembic migrations, it's standard pattern
# Ignore F841 (unused variable) - often used for readability or future use
# Ignore E722 (bare except) when Exception handling is too broad
ignore = ["F841"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations use import * pattern
"ml_api/db/migrations/env.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
